--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 ---
 layout: default
+tag: home_page
 ---
 
-<div class="home">
-
-
+<!-- <div class="home"> -->
+  <div class="jumbotron">
+    <div class="container">
+      <h1>Sensu Plugins</h1>
+      <p>Here you will find example plugins, handlers and additional code to maximize the effective use of Sensu in various types of auto-scaling and traditional environments. Most of the code is implemented in Ruby and use the sensu-plugin framework; some also depend on additional gems or packages(e.g. mysql). Some are shell scripts! All languages are welcome but preference is given towards Ruby.
+ </p><br />
+      <a class="btn btn-primary btn-lg" href="/about/" role="button">Learn more &raquo;</a><br />
+    </div>
 </div>
+
+<!-- </div> -->
