--- a/downloads/index.html
+++ b/downloads/index.html
@@ -17,4 +17,4 @@ You can also download the key from */certs/* within each repository.
 
 
 
-{{% include _plugin.html %}}
+{% include _plugin.html %}
