--- a/downloads/index.html
+++ b/downloads/index.html
@@ -1,7 +1,8 @@
 ---
 layout: page
-title: Downloads
+title: Plugins
 permalink: /downloads/
+tag: full_width
 ---
 
 All Sensu-Plugins gems are cryptographically signed. To be sure the gem you install hasn’t been tampered with:
