--- a/plugins/index.html
+++ b/plugins/index.html
@@ -2,7 +2,7 @@
 layout: page
 permalink: /plugins/
 title: Plugins
-tag: full_width no_title
+tag: [full_width, no_title]
 ---
 
 {% include _plugin.html %}
