--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ tag: full_width
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h1>Truly leverage Sensu!</h1>
+                <h1>Fully leverage Sensu!</h1>
                 <h3>We have open source plugins, handlers and mutators to maximize the effective use of Sensu.</h3>
             </div>
             <div class="col-lg-8 col-lg-offset-2 himg">
@@ -50,8 +50,8 @@ tag: full_width
             <div class="col-lg-8 col-lg-offset-2">
                 <i class="fa fa-comment-o"></i>
                 <p>
-                    "DCFT being an financial exchange, we need to meet stringent SLA's, Sensu helped us manage our metrics and keep our performance targets. Deploying Sensu and
-                    various plugins over our 70+ node large cluster helped us maintain 99.99% uptime and measure API and trading engine latencies."
+                    "DCFT being an financial exchange, we need to meet stringent SLA's, Sensu helps us manage our infrastructure and monitor our performance targets. Deploying Sensu and
+                    various plugins over our 70+ node large cluster helps us maintain 99.99% uptime and measure API and trading engine latencies."
                 </p>
                 <h4><br/>Mathias Bogaert, VP of Technical Operations, DCFT</h4>
                 <h5>&nbsp;</h5>
