--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@ tag: full_width
             <div class="col-lg-8 col-lg-offset-2 himg">
                 <script type="text/javascript" src="https://asciinema.org/a/14734.js" id="asciicast-14734" async></script>
             </div>
+            <div class="col-lg-8 col-lg-offset-2">
+                <h5>Popular plugins:
+                    <a href="https://github.com/sensu-plugins/sensu-plugins-cpu-checks" style="color: white; text-decoration: underline;">CPU Checks</a>,
+                    <a href="https://github.com/sensu-plugins/sensu-plugins-memory-checks" style="color: white; text-decoration: underline;">Memory Checks</a>,
+                    <a href="https://github.com/sensu-plugins/sensu-plugins-disk-checks" style="color: white; text-decoration: underline;">Disk Checks</a>,
+                    <a href="https://github.com/sensu-plugins/sensu-plugins-network-checks" style="color: white; text-decoration: underline;">Network Checks</a>,
+                    <a href="https://github.com/sensu-plugins/sensu-plugins-mailer" style="color: white; text-decoration: underline;">Mailer</a>,
+                    <a href="https://github.com/sensu-plugins/sensu-plugins-graphite" style="color: white; text-decoration: underline;">Graphite</a>,
+                    <a href="https://github.com/sensu-plugins/sensu-plugins-http" style="color: white; text-decoration: underline;">HTTP</a>
+                </h5>
+            </div>
         </div>
     </div>
 </div>
