--- a/index.html
+++ b/index.html
@@ -9,21 +9,27 @@ tag: full_width
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h1>Fully leverage Sensu!</h1>
-                <h3>We have open source plugins, handlers and mutators to maximize the effective use of Sensu.</h3>
+                <h3>We have open source plugins, handlers and mutators to maximize the effective use of <a href="http://sensuapp.org" style="color: white; text-decoration: underline;">Sensu</a>.</h3>
             </div>
             <div class="col-lg-8 col-lg-offset-2 himg">
                 <script type="text/javascript" src="https://asciinema.org/a/14734.js" id="asciicast-14734" async></script>
             </div>
             <div class="col-lg-8 col-lg-offset-2">
-                <h5>Popular plugins:
-                    <a href="https://github.com/sensu-plugins/sensu-plugins-cpu-checks" style="color: white; text-decoration: underline;">CPU Checks</a>,
-                    <a href="https://github.com/sensu-plugins/sensu-plugins-memory-checks" style="color: white; text-decoration: underline;">Memory Checks</a>,
-                    <a href="https://github.com/sensu-plugins/sensu-plugins-disk-checks" style="color: white; text-decoration: underline;">Disk Checks</a>,
-                    <a href="https://github.com/sensu-plugins/sensu-plugins-network-checks" style="color: white; text-decoration: underline;">Network Checks</a>,
-                    <a href="https://github.com/sensu-plugins/sensu-plugins-mailer" style="color: white; text-decoration: underline;">Mailer</a>,
+                <h4>Popular plugins:
+                    <a href="https://github.com/sensu-plugins/sensu-plugins-cpu-checks" style="color: white; text-decoration: underline;">CPU</a>,
+                    <a href="https://github.com/sensu-plugins/sensu-plugins-memory-checks" style="color: white; text-decoration: underline;">Memory</a>,
+                    <a href="https://github.com/sensu-plugins/sensu-plugins-disk-checks" style="color: white; text-decoration: underline;">Disk</a>, and
+                    <a href="https://github.com/sensu-plugins/sensu-plugins-network-checks" style="color: white; text-decoration: underline;">Network</a> checks,
+                    <a href="https://github.com/sensu-plugins/sensu-plugins-load-checks" style="color: white; text-decoration: underline;">system load</a>,
+                    <a href="https://github.com/sensu-plugins/sensu-plugins-redis" style="color: white; text-decoration: underline;">Redis</a>,
+                    <a href="https://github.com/sensu-plugins/sensu-plugins-elasticsearch" style="color: white; text-decoration: underline;">ElasticSearch</a>,
+                    <a href="https://github.com/sensu-plugins/sensu-plugins-mysql" style="color: white; text-decoration: underline;">MySQL</a>,
+                    <a href="https://github.com/sensu-plugins/sensu-plugins-mesos" style="color: white; text-decoration: underline;">Mesos</a>,
+                    <a href="https://github.com/sensu-plugins/sensu-plugins-mailer" style="color: white; text-decoration: underline;">a mailer</a>,
+                    <a href="https://github.com/sensu-plugins/sensu-plugins-pagerduty" style="color: white; text-decoration: underline;">PagerDuty</a> integration, metric export to
                     <a href="https://github.com/sensu-plugins/sensu-plugins-graphite" style="color: white; text-decoration: underline;">Graphite</a>,
-                    <a href="https://github.com/sensu-plugins/sensu-plugins-http" style="color: white; text-decoration: underline;">HTTP</a>
-                </h5>
+                    <a href="https://github.com/sensu-plugins/sensu-plugins-http" style="color: white; text-decoration: underline;">HTTP requests</a> and many more...
+                </h4>
             </div>
         </div>
     </div>
