--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ tag: full_width
     <div class="row">
         <div class="col-lg-4">
             <h4>About Sensu Plugins</h4>
+            <div class="hline"></div>
             <p>
                 This project contains plugins, handlers, mutators and other code to maximize the effective use of Sensu in various types of auto-scaling and traditional environments. Most of them are implemented in Ruby and use the sensu-plugin gem.
             </p>
