--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ tag: full_width
                     <a href="https://github.com/sensu-plugins/sensu-plugins-disk-checks" style="color: white; text-decoration: underline;">Disk</a>, and
                     <a href="https://github.com/sensu-plugins/sensu-plugins-network-checks" style="color: white; text-decoration: underline;">Network</a> checks,
                     <a href="https://github.com/sensu-plugins/sensu-plugins-load-checks" style="color: white; text-decoration: underline;">system load</a>,
+                    <a href="https://github.com/sensu-plugins/sensu-plugins-hardware" style="color: white; text-decoration: underline;">hardware checks</a>,
                     <a href="https://github.com/sensu-plugins/sensu-plugins-redis" style="color: white; text-decoration: underline;">Redis</a>,
                     <a href="https://github.com/sensu-plugins/sensu-plugins-elasticsearch" style="color: white; text-decoration: underline;">ElasticSearch</a>,
                     <a href="https://github.com/sensu-plugins/sensu-plugins-mysql" style="color: white; text-decoration: underline;">MySQL</a>,
@@ -28,6 +29,7 @@ tag: full_width
                     <a href="https://github.com/sensu-plugins/sensu-plugins-mailer" style="color: white; text-decoration: underline;">a mailer</a>,
                     <a href="https://github.com/sensu-plugins/sensu-plugins-pagerduty" style="color: white; text-decoration: underline;">PagerDuty</a> integration, metric export to
                     <a href="https://github.com/sensu-plugins/sensu-plugins-graphite" style="color: white; text-decoration: underline;">Graphite</a>,
+                    <a href="https://github.com/sensu-plugins/sensu-plugins-aws" style="color: white; text-decoration: underline;">AWS</a>,
                     <a href="https://github.com/sensu-plugins/sensu-plugins-http" style="color: white; text-decoration: underline;">HTTP requests</a> and many more...
                     <br>
                     <br>
@@ -66,8 +68,8 @@ tag: full_width
             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         </div>
 
-    </div><! --/row -->
-</div><! --/container -->
+    </div>
+</div>
 
 <div id="twrap">
     <div class="container centered">
@@ -81,6 +83,6 @@ tag: full_width
                 <h5><strong>Mathias Bogaert, VP of Technical Operations, DCFT</strong></h5>
                 <h5>&nbsp;</h5>
             </div>
-        </div><! --/row -->
-    </div><! --/container -->
-</div><! --/twrap -->
+        </div>
+    </div>
+</div>
